# storage/api-docs/api-docs.json
@@ -31,6 +31,14 @@
                                     ""
                                 ],
                                 "properties": {
+                                    "itemsPerPage": {
+                                        "type": "integer",
+                                        "default": 5
+                                    },
+                                    "page": {
+                                        "type": "integer",
+                                        "default": 1
+                                    },
                                     "name": {
                                         "type": "string",
                                         "default": "mil"
